--- a/login.html
+++ b/login.html
@@ -1,19 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <div class="container">
-    <h2>Login</h2>
-    <input type="text" id="username" placeholder="Username" /><br /><br />
-    <input type="password" id="password" placeholder="Password" /><br /><br />
-    <button class="btn" onclick="login()">Login</button>
-    <button class="btn" onclick="redirectToLanding()">Cancel</button>
-  </div>
-  <script src="js/login.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login Page</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script type="text/javascript">
+      // Configures the SDK. Note the settings below for isDevelopmentMode
+      // and logLevel.
+      window.mParticle = {
+        config: {
+          isDevelopmentMode: true,
+          logLevel: "verbose",
+        },
+      };
+
+      (function (e) {
+        window.mParticle = window.mParticle || {};
+        window.mParticle.EventType = {
+          Unknown: 0,
+          Navigation: 1,
+          Location: 2,
+          Search: 3,
+          Transaction: 4,
+          UserContent: 5,
+          UserPreference: 6,
+          Social: 7,
+          Other: 8,
+        };
+        window.mParticle.eCommerce = { Cart: {} };
+        window.mParticle.Identity = {};
+        window.mParticle.config = window.mParticle.config || {};
+        window.mParticle.config.rq = [];
+        window.mParticle.config.snippetVersion = 2.3;
+        window.mParticle.ready = function (e) {
+          window.mParticle.config.rq.push(e);
+        };
+        var i = [
+          "endSession",
+          "logError",
+          "logBaseEvent",
+          "logEvent",
+          "logForm",
+          "logLink",
+          "logPageView",
+          "setSessionAttribute",
+          "setAppName",
+          "setAppVersion",
+          "setOptOut",
+          "setPosition",
+          "startNewSession",
+          "startTrackingLocation",
+          "stopTrackingLocation",
+        ];
+        var n = ["setCurrencyCode", "logCheckout"];
+        var t = ["identify", "login", "logout", "modify"];
+        i.forEach(function (e) {
+          window.mParticle[e] = o(e);
+        });
+        n.forEach(function (e) {
+          window.mParticle.eCommerce[e] = o(e, "eCommerce");
+        });
+        t.forEach(function (e) {
+          window.mParticle.Identity[e] = o(e, "Identity");
+        });
+        function o(i, n) {
+          return function () {
+            if (n) {
+              i = n + "." + i;
+            }
+            var e = Array.prototype.slice.call(arguments);
+            e.unshift(i);
+            window.mParticle.config.rq.push(e);
+          };
+        }
+        var r,
+          c,
+          a = window.mParticle.config,
+          s = a.isDevelopmentMode ? 1 : 0,
+          l = "?env=" + s,
+          w = window.mParticle.config.dataPlan;
+        if (w) {
+          r = w.planId;
+          c = w.planVersion;
+          if (r) {
+            if (c && (c < 1 || c > 1e3)) {
+              c = null;
+            }
+            l += "&plan_id=" + r + (c ? "&plan_version=" + c : "");
+          }
+        }
+        var d = window.mParticle.config.versions;
+        var m = [];
+        if (d) {
+          Object.keys(d).forEach(function (e) {
+            m.push(e + "=" + d[e]);
+          });
+        }
+        var f = document.createElement("script");
+        f.type = "text/javascript";
+        f.async = true;
+        f.src =
+          ("https:" == document.location.protocol
+            ? "https://jssdkcdns"
+            : "http://jssdkcdn") +
+          ".mparticle.com/js/v2/" +
+          e +
+          "/mparticle.js" +
+          l +
+          "&" +
+          m.join("&");
+        var p = document.getElementsByTagName("script")[0];
+        p.parentNode.insertBefore(f, p);
+      })(
+        // Insert your API key below
+        ""
+      );
+    </script>
+  </head>
+  <body>
+    <div class="container">
+      <h2>Login</h2>
+      <input type="text" id="username" placeholder="Username" /><br /><br />
+      <input type="password" id="password" placeholder="Password" /><br /><br />
+      <button class="btn" onclick="login()">Login</button>
+      <button class="btn" onclick="redirectToLanding()">Cancel</button>
+    </div>
+    <script src="js/login.js"></script>
+  </body>
 </html>
